Improved error handling + documentation fix
